# wash_detector

./: .gitignore  CHANGELOG.md  CODEBASE_SCAN_REPORT.md  README.md  pyproject.toml  watch_live.sh
artifacts/batch_full65/: batch_summary.csv  batch_summary.json  batch_summary.txt
artifacts/batch_oldest6_tail/: batch_summary.csv  batch_summary.json  batch_summary.txt
artifacts/batch_recent14/: batch_summary.csv  batch_summary.json  batch_summary.txt
artifacts/batch_recent28/: batch_summary.csv  batch_summary.json  batch_summary.txt
artifacts/batch_recent3/: batch_summary.csv  batch_summary.json  batch_summary.txt
docs/: AI_HANDOFF_SUMMARY.md  CLAUDE_CHAT_2025-0217_LEDGER.md  PLAN.md  STEP_01_SCOPE_AND_GUARDRAILS.md  STEP_02_SCHEMA_CONTRACT.md  STEP_03_INGESTION_NORMALIZATION.md  STEP_04_DETECTOR_RULE_ENGINE.md  STEP_05_PIPELINE_RUNNER.md  STEP_06_SYNTHETIC_VALIDATION.md  STEP_07_V1_READINESS.md  STEP_08_REAL_DATA_COMPATIBILITY.md  STEP_09_REAL_BATCH_RUNNER.md  STEP_10_RECENT_WINDOW_BASELINE.md  STEP_11_RECENT14_BASELINE.md  WORKLOG.md
learning/: PROGRESS_2026-02-19.md  RESULTS.md  adaptive_config.json  all_feedback.csv  calibrated_config.json  calibration.json  calibration_report.json  layering_tp_fingerprint.csv  layering_tp_strong.csv  learned_config.json  tuned_config.json  user_learned_config.json  week_labeled_cleaned.csv  week_labeled_fixed_v2.csv  week_labeled_v2_fixed.csv
tests/: test_detect.py  test_ingest.py  test_learning.py  test_pipeline.py  test_real_batch.py  test_schema_contract.py  test_smoke.py  test_timestamp_parsing.py  test_validation.py
(+547 files in other folders)
