[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wash-detector"
version = "0.1.0"
description = "Standalone wash-trading detection rebuild"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["tqdm>=4.66"]

[project.scripts]
wash-detector = "wash_detector.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
